feat: complete enterprise landing page and backend overhauls